--- a/HTML/gallery.html
+++ b/HTML/gallery.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="./css/gallery.css">
+    <link rel="stylesheet" href="../css/gallery.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
      integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay"
      crossorigin="anonymous">
-     <link rel="shortcut icon" href="./Images/1144988-200.png" type="image/x-icon">
+     <link rel="shortcut icon" href="../Images/1144988-200.png" type="image/x-icon">
     <title>Photograph</title>
 </head>
 <body>
@@ -18,7 +18,7 @@
     <header>
 
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#"><img src="./Images/logo.png"></a>
+            <a class="navbar-brand" href="#"><img src="../Images/logo.png"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
             </button>
@@ -44,35 +44,35 @@
             <div class="container">
                 <div class="row line">
                     <div class="col-12  col-sm-12 col-md-4">
-                        <img src="./Images/galery9.jpg" alt="galery1" class="clickable">
+                        <img src="../Images/galery9.jpg" alt="galery1" class="clickable">
                     </div>
                     <div class="col-12  col-sm-12 col-md-4">
-                        <img src="./Images/galery2.jpg" alt="galery2" class="clickable">
+                        <img src="../Images/galery2.jpg" alt="galery2" class="clickable">
                     </div>
                     <div class="col-12  col-sm-12 col-md-4">
-                        <img src="./Images/galery3.jpg" alt="galery3" class="clickable">
-                    </div>
-                </div>
-                <div class="row line">
-                    <div class="col-12  col-sm-12 col-md-4">
-                        <img src="./Images/galery4.jpg" alt="galery4" class="clickable">
-                    </div>
-                    <div class="col-12  col-sm-12 col-md-4">
-                        <img src="./Images/galery5.jpg" alt="galery5" class="clickable">
-                    </div>
-                    <div class="col-12  col-sm-12 col-md-4">
-                        <img src="./Images/galery6.jpg" alt="galery6" class="clickable">
+                        <img src="../Images/galery3.jpg" alt="galery3" class="clickable">
                     </div>
                 </div>
                 <div class="row line">
                     <div class="col-12  col-sm-12 col-md-4">
-                        <img src="./Images/galery7.jpg" alt="galery7" class="clickable">
+                        <img src="../Images/galery4.jpg" alt="galery4" class="clickable">
                     </div>
                     <div class="col-12  col-sm-12 col-md-4">
-                        <img src="./Images/galery8.jpg" alt="galery8" class="clickable">
+                        <img src="../Images/galery5.jpg" alt="galery5" class="clickable">
                     </div>
                     <div class="col-12  col-sm-12 col-md-4">
-                        <img src="./Images/galery9.jpg" alt="galery9" class="clickable">
+                        <img src="../Images/galery6.jpg" alt="galery6" class="clickable">
+                    </div>
+                </div>
+                <div class="row line">
+                    <div class="col-12  col-sm-12 col-md-4">
+                        <img src="../Images/galery7.jpg" alt="galery7" class="clickable">
+                    </div>
+                    <div class="col-12  col-sm-12 col-md-4">
+                        <img src="../Images/galery8.jpg" alt="galery8" class="clickable">
+                    </div>
+                    <div class="col-12  col-sm-12 col-md-4">
+                        <img src="../Images/galery9.jpg" alt="galery9" class="clickable">
                     </div>
                 </div>
             </div>
@@ -93,9 +93,9 @@
         </div>
 
         <div class="fd2">
-            <img src="./Images/download.png" alt="facebook">
-            <img src="./Images/124010.png" alt="facebook">
-            <img src="./Images/a25f4f58938bbe61357ebca42d23866f.png" alt="instagram">
+            <img src="../Images/download.png" alt="facebook">
+            <img src="../Images/124010.png" alt="facebook">
+            <img src="../Images/a25f4f58938bbe61357ebca42d23866f.png" alt="instagram">
         </div>
 
     </footer>
@@ -111,7 +111,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="./Jquery/jquery.js"></script>
-    <script src="./Js/gallery.js"></script>    
+    <script src="../Jquery/jquery.js"></script>
+    <script src="../Js/gallery.js"></script>    
 </body>
 </html>
