--- a/about/index.html
+++ b/about/index.html
@@ -23,10 +23,10 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto menu">
-                <a class="nav-item nav-link active" href="../index.html">HOME <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="../gallery/gallery.html">GALLERY</a>
+                <a class="nav-item nav-link active" href="../">HOME <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="../gallery/">GALLERY</a>
                 <a class="nav-item nav-link" href="about.html">ABOUT ME</a>
-                <a class="nav-item nav-link" href="../contact/contact.html">CONTACT</a>
+                <a class="nav-item nav-link" href="../contact/">CONTACT</a>
             </div>
             </div>
         </nav>
