--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto menu">
                 <a class="nav-item nav-link active" href="home.html">HOME <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="./gallery/gallery.html">GALLERY</a>
-                <a class="nav-item nav-link" href="./about/about.html">ABOUT ME</a>
-                <a class="nav-item nav-link" href="./contact/contact.html">CONTACT</a>
+                <a class="nav-item nav-link" href="./gallery/">GALLERY</a>
+                <a class="nav-item nav-link" href="./about/">ABOUT ME</a>
+                <a class="nav-item nav-link" href="./contact/">CONTACT</a>
             </div>
             </div>
         </nav>
