--- a/gallery/index.html
+++ b/gallery/index.html
@@ -78,9 +78,9 @@
             </div>
 
             <div class="cover">
-            <span class="exit">&#10006;</span>
-            <img src="" class="coverimage">
-        </div>
+                <span class="exit">&#10006;</span>
+                <img src="" class="coverimage  col-12 col-sm-5">
+            </div>
         </section>
 
     </main>
