--- a/contact/index.html
+++ b/contact/index.html
@@ -26,7 +26,7 @@
                 <a class="nav-item nav-link active" href="../">HOME <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="../gallery/">GALLERY</a>
                 <a class="nav-item nav-link" href="../about/">ABOUT ME</a>
-                <a class="nav-item nav-link" href="contact.html">CONTACT</a>
+                <a class="nav-item nav-link" href="./">CONTACT</a>
             </div>
             </div>
         </nav>
