--- a/about/index.html
+++ b/about/index.html
@@ -25,7 +25,7 @@
             <div class="navbar-nav ml-auto menu">
                 <a class="nav-item nav-link active" href="../">HOME <span class="sr-only">(current)</span></a>
                 <a class="nav-item nav-link" href="../gallery/">GALLERY</a>
-                <a class="nav-item nav-link" href="about.html">ABOUT ME</a>
+                <a class="nav-item nav-link" href="./">ABOUT ME</a>
                 <a class="nav-item nav-link" href="../contact/">CONTACT</a>
             </div>
             </div>
