--- a/about/index.html
+++ b/about/index.html
@@ -57,18 +57,15 @@
         </div>
     </main>
 
-
-
-
-
-
-
-
-
         <div class="top" id="top">
             <i class="fa fa-chevron-up"></i>
             <p>TOP</p>
         </div>
+
+        
+        <div class="animate">
+            <img src="./images/logo.png" alt="Logo" class="animate-logo">
+         </div>
     
     </main>
         <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
