--- a/gallery/index.html
+++ b/gallery/index.html
@@ -105,7 +105,9 @@
         <p>TOP</p>
     </div>
 
-
+    <div class="animate">
+        <img src="./images/logo.png" alt="Logo" class="animate-logo">
+     </div>
     
     
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
