--- a/about/index.html
+++ b/about/index.html
@@ -64,7 +64,7 @@
 
         
         <div class="animate">
-            <img src="./images/logo.png" alt="Logo" class="animate-logo">
+            <img src="../images/logo.png" alt="Logo" class="animate-logo">
          </div>
     
     </main>
