--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav ml-auto menu">
                 <a class="nav-item nav-link active" href="./">HOME <span class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="./gallery/index">GALLERY</a>
+                <a class="nav-item nav-link" href="./gallery/">GALLERY</a>
                 <a class="nav-item nav-link" href="./about/">ABOUT ME</a>
                 <a class="nav-item nav-link" href="./contact/">CONTACT</a>
             </div>
@@ -83,7 +83,7 @@
     </div>
 
     <div class="animate">
-        <img src="./images/logo.png" alt="Logo" class="animate-logo">
+        <img src="./Images/logo.png" alt="Logo" class="animate-logo">
      </div>
 
 </main>
