--- a/gallery/index.html
+++ b/gallery/index.html
@@ -79,8 +79,10 @@
 
             <div class="cover">
                 <span class="exit">&#10006;</span>
-                <img src="" class="coverimage  col-12 col-sm-5">
+                <img src="" class="coverimage  ">
             </div>
+
+            
         </section>
 
     </main>
